--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,10 @@
   </header>
   <main class="content">
     <section class="profile page__section">
+      <button class="profile__avatar-button" name="edit-avatar" type="button">
       <div class="profile__image" style="background-image: url('<%=require('./images/avatar.jpg')%>');"></div>
+    <div class="profile__image"></div>
+    </button>
       <div class="profile__info">
         <h1 class="profile__title">Жак-Ив Кусто</h1>
         <button class="profile__edit-button" type="button"></button>
